tests/error/modifier_errors/return_found.py
from guppylang.decorator import guppy
from guppylang.std.builtins import dagger


@guppy
def test() -> None:
    with dagger:
        return


test.compile()
