tests/error/modifier_errors/return_found.err
Error: Unexpected return (at $FILE:8:8)
  | 
6 | def test() -> None:
7 |     with dagger:
8 |         return
  |         ^^^^^^ Return found in a `With` block

Note:
  | 
6 | def test() -> None:
7 |     with dagger:
  |          ------ modifier is used here

Guppy compilation failed due to 1 previous error
